--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -183,3 +183,17 @@ textarea::-webkit-scrollbar-thumb {
 		line-height: 1rem;
 	}
 }
+
+@keyframes tick {
+	0%,
+	100% {
+		transform: rotate(0deg);
+	}
+	50% {
+		transform: rotate(6deg);
+	} /* small swing like ticking */
+}
+
+.animate-tick {
+	animation: tick 1s infinite ease-in-out;
+}
